# 2D-Physics-Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  callgrind.out.26055  callgrind.out.7721
include/: physicsSystem.hpp  utils.hpp  utils2D.hpp
include/datatypes/: line.hpp  matrix22d.hpp  vector2d.hpp  vector2f.hpp
include/forces/: forceGenerator.hpp  forceRegistration.hpp  forceRegistry.hpp  gravity.hpp
include/primitives/: AABB.hpp  box.hpp  circle.hpp  collider.hpp  ray.hpp  raycastResult.hpp
include/render/: renderer.hpp
include/rigidbody/: collisionManifold.hpp  collisions.hpp  intersectionDetector.hpp  rigidBody.hpp
src/: main.cpp  physicsSystem.cpp  utils.cpp  utils2D.cpp
src/datatypes/: line.cpp  matrix22d.cpp  vector2d.cpp  vector2f.cpp
src/forces/: forceGenerator.cpp  forceRegistration.cpp  forceRegistry.cpp  gravity.cpp
src/primitives/: AABB.cpp  box.cpp  circle.cpp  collider.cpp  ray.cpp  raycastResult.cpp
src/render/: renderer.cpp
src/rigidbody/: collisionManifold.cpp  collisions.cpp  intersectionDetector.cpp  rigidBody.cpp
tests/: BoxIntersectionTests.hpp  CircleIntersectionTests.hpp  LineIntersectionTests.hpp  utils_test.cpp
tests/datatypes/: line_test.cpp  vector2d_test.cpp
tests/primitives/: AABB_test.cpp  circle_test.cpp
tests/rigidbody/: intersectionDetector.cpp  intersectionDetector_test.cpp  rigidBody_test.cpp
